# GPCGLUtils

./: CMakeLists.txt  conanfile.txt
docs/: log.txt
lib/: CMakeLists.txt  libGPCGLUtils-config.cmake.in
lib/cmake/: FindGLBINDING.cmake
lib/include/gpc/gl/: shader_program.hpp  textured_quad.hpp  textured_rectangle.hpp  triangle_strip.hpp  uniform.hpp  utils.hpp  vectors.hpp
lib/include/gpc/gl/shaders/fragment/: picture.hpp  rgba.hpp
lib/include/gpc/gl/shaders/vertex/: pixel_grid.hpp
lib/shaders/fragment/: picture.glsl  rgba.glsl
lib/shaders/vertex/: pixel_grid.glsl
lib/src/: textured_rectangle.cpp
test_app/: CMakeLists.txt  main.cpp  test_window.hpp
test_suite/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
tests/: CMakeLists.txt  main.cpp
